# TensorRT-YOLOv8-ByteTrack

./: CMakeLists.txt  LICENSE  README-en.md  README.md  main.cpp
tensorrtx-yolov8/: CMakeLists.txt  README.md  main.cpp
tensorrtx-yolov8/src/: postprocess.cpp
yolo/: CMakeLists.txt  README.md  main.cpp
yolo/include/: config.h  postprocess.h  preprocess.h  public.h  types.h  utils.h  yolov8_lib.h
yolo/plugin/: yololayer.cu  yololayer.h
yolo/src/: postprocess.cpp  preprocess.cu  yolov8_lib.cpp
